refactor(cell): Refactor Cell class to no longer contain Entity reference